--- a/Sketch_variable/abc/A_slider/index.html
+++ b/Sketch_variable/abc/A_slider/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="utf-8">
-	<title>A_slider</title>
+	<title>A_slider_SAJO</title>
 	<meta name="description" 							content="A">
 	<meta name="author"                       			content="Chiara">
 	<meta name="viewport" 								content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
 
 		@font-face {
 			font-family: ‘Font’;
-			src: url('AktivGroteskVF_Trial_WghtWdthItal.ttf') format('truetype-variations');
+			src: url('CC_provaGX.ttf') format('truetype-variations');
 			font-weight: 0 1000;
 			color: white;
 		}
@@ -47,9 +47,9 @@
 			color: white;
 			margin: 0;
 			
-			font-variation-settings: 'wght' 100;
-			font-variation-settings: 'wdth' 75;
-			font-variation-settings: 'ital' 0;
+			font-variation-settings: 'SAJO' 100;
+/*			font-variation-settings: 'wdth' 75;
+			font-variation-settings: 'ital' 0;*/
 		}
 
 		.slider {
