--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -22,8 +22,8 @@
 		@font-face {
 			font-family: ‘Font’;
 			src: url('DV_variableGX.ttf') format('truetype-variations');
-			font-weight: 0 1000;
-			color: white;
+/*			font-weight: 0 1000;
+*/			color: white;
 		}
 
 		/*
