--- a/Sketch_variable/abc/A_slider_CC/index.html
+++ b/Sketch_variable/abc/A_slider_CC/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="utf-8">
-	<title>A_slider_SAJO</title>
+	<title>A_slider_variable</title>
 	<meta name="description" 							content="A">
 	<meta name="author"                       			content="Chiara">
 	<meta name="viewport" 								content="width=device-width, initial-scale=1">
@@ -48,8 +48,9 @@
 			margin: 0;
 			
 			font-variation-settings: 'SAJO' 100;
-/*			font-variation-settings: 'wdth' 75;
-			font-variation-settings: 'ital' 0;*/
+			font-variation-settings: 'ANSU' 100;
+			font-variation-settings: 'DITR' 100;
+			font-variation-settings: 'ANFE' 100;
 		}
 
 		.slider {
