--- a/Sketch_variable/abc/A_slider_CC/index.html
+++ b/Sketch_variable/abc/A_slider_CC/index.html
@@ -53,28 +53,33 @@
 			font-variation-settings: 'ANFE' 100;
 		}
 
+		.slidecontainer {
+  			width: 100%;
+			}
+
 		.slider {
-		  	-webkit-appearance: none;
-		  	width: 100%;
-		  	height: 10px;
-		  	background: white;
-		  	outline: none;
-		  	opacity: 1;
-		  	-webkit-transition: .2s;
-		  	transition: opacity .2s;
+  			-webkit-appearance: none;
+  			width: 100%;
+  			height: 5px;
+  			background: white;
+  			outline: none;
+  			-webkit-transition: .2s;
+/*  			opacity: 0.8;*/
+ 			transition: .2s;
 		}
 
 		.slider:hover {
+  			opacity: 1;
 		}
 
 		.slider::-webkit-slider-thumb {
-		  -webkit-appearance: none;
-		  appearance: none;
-		  width: 25px;
-		  height: 25px;
-		  background: white;
-		  cursor: pointer;
+  			-webkit-appearance: none;
+  			appearance: none;
+  			width: 25px;
+  			height: 25px;
+  			background: white;
 		}
+
 
 	</style>
 
