--- a/posNet/index.html
+++ b/posNet/index.html
@@ -26,7 +26,7 @@
 
 		@font-face {
 			font-family: ‘Font’;
-			src: url('CC_provaGX.ttf') format('truetype-variations');
+			src: url('DV_variableGX.ttf') format('truetype-variations');
 			/*font-weight: -100 100;*/
 			color: white;
 		}
@@ -50,7 +50,7 @@
 			margin: 0;
 			
 
-			font-variation-settings: 'SAJO' 51;
+			font-variation-settings: 'SIZE' 51;
 			/*font-variation-settings: 'wght' 100;*/
 		}
 		</style>
