--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -21,7 +21,7 @@
 
 		@font-face {
 			font-family: ‘Font’;
-			src: url('DV_variableGX.ttf') format('truetype-variations');
+			src: url('DVGX.ttf') format('truetype-variations');
 /*			font-weight: 0 1000;
 */			color: white;
 		}
@@ -88,7 +88,7 @@
 <body class="disable-select disable-scroll">
 
 	
-	<div id="text">A</div>
+	<div id="text">prova</div>
 	<script src="../../js/lib/p5/p5.min.js"></script>
 	<!-- <script src="../../../js/lib/p5/addons/p5.sound.min.js"></script> -->
 	<script src="main.js"></script>
