--- a/posNet/index.html
+++ b/posNet/index.html
@@ -26,7 +26,7 @@
 
 		@font-face {
 			font-family: ‘Font’;
-			src: url('DV_variableGX.ttf') format('truetype-variations');
+			src: url('DVGX.ttf') format('truetype-variations');
 			/*font-weight: -100 100;*/
 			color: white;
 		}
