--- a/posNet/index.html
+++ b/posNet/index.html
@@ -43,9 +43,9 @@
 			height:100vh;
 
 			font-family: ‘Font’;
-			text-align: center;
-			padding: 30% 0;
-	
+			text-align: left;
+/*			padding: 30% 0;
+*/	
 			color: white;
 			margin: 0;
 			
@@ -62,7 +62,7 @@
 	<!--per creare server locale-->
 	<!--<script src="/socket.io/socket.io.js"></script>-->
 
-	<div id="text">A</div>
+	<div id="text">Beyoncé []Giselle Knowles-Carter born September 4, 1981) is an American singer, songwriter, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as the lead singer of Destiny's Child, one of the best-selling girl groups in history. During their hiatus, she made her theatrical film debut with a role in the US box-office number-one Austin Powers in Goldmember (2002) and recorded her first solo album, Dangerously in Love (2003), which debuted at number one on the US Billboard 200 chart. It also featured the US Billboard Hot 100 number-one singles "Crazy in Love" and "Baby Boy".</div>
 
 	<!-- <script src="../../js/lib/p5/p5.min.js"></script> -->
 	<!-- <script src="../../../js/common.js"></script>  -->
