--- a/posNet/index.html
+++ b/posNet/index.html
@@ -62,7 +62,7 @@
 	<!--per creare server locale-->
 	<!--<script src="/socket.io/socket.io.js"></script>-->
 
-	<div id="text">closer</div>
+	<div id="text">optotype</div>
 
 	<!-- <script src="../../js/lib/p5/p5.min.js"></script> -->
 	<!-- <script src="../../../js/common.js"></script>  -->
