--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -11,19 +11,22 @@
 	<meta name="theme-color" 							content="black">
 	<meta name="msapplication-navbutton-color" 			content="black">
 	<meta name="apple-mobile-web-app-status-bar-style" 	content="black">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet"       href="../../css/style.css">
 
 	<style type="text/css">
 		body{
-			background-color: black;
-			color: white;	
+			background-color: white;
+			color: black;	
+			padding:0;
+			margin:0;
 		}
 
 		@font-face {
 			font-family: ‘Font’;
 			src: url('DVGX.ttf') format('truetype-variations');
-/*			font-weight: 0 1000;
-*/			color: white;
+			/*font-weight: 0 1000;*/			
+			color: black;
 		}
 
 		/*
@@ -33,44 +36,62 @@
 		
 		#text {
 			position: absolute;
-			/*left: 0;
-			top: 0;
+			/*left: -1000px;
+			top: -500px;
 			right: 0;
 			bottom: 0; */
 			width: 100vw;
-			height:100vh;
+			height:80vh;
 
 			font-family: ‘Font’;
 			text-align: center;
 			padding: 10% 0;
-	
-			color: white;
-			margin: 0;
+		
+			color: black;
+			margin: 10;
 			
 			font-variation-settings: 'SIZE' 300;
-/*			font-variation-settings: 'wdth' 75;
-			font-variation-settings: 'ital' 0;*/
+			/*letter-spacing: -1px;*/
+			font-kerning: normal;
+		}
+
+		.slidecontainer {
+		 	width: 102vw;
+
+		  	z-index: 1;
+		  	border: 1px solid #C0C0C0;
+		  	padding: 0;
+		  	margin:0;
+		  	margin-left: -18px;
+		  	margin-top: -2px;
+		  	padding-top: 10px;
+
+
 		}
 
 		.slider {
-		  	-webkit-appearance: none;
-		  	width: 100%;
-		  	height: 25px;
-		  	/*background: #d3d3d3;*/
-		  	outline: none;
-		  	opacity: 1;
-		  	-webkit-transition: .2s;
-		  	transition: opacity .2s;
+		  -webkit-appearance: none;
+		  width: 80%;
+		  height: 1px;
+		  border-radius: 2px;
+		  background: #C0C0C0;
+		  outline: none;
+		  opacity: 0.7;
+		  -webkit-transition: .2s;
+		  transition: opacity .2s;
 		}
 
 		.slider:hover {
+		  opacity: 1;
 		}
 
 		.slider::-webkit-slider-thumb {
 		  -webkit-appearance: none;
 		  appearance: none;
-		  width: 25px;
-		  height: 25px;
+		  width: 15px;
+		  height: 15px;
+		  border-radius: 50%;
+		  border: 1px solid #C0C0C0;
 		  background: white;
 		  cursor: pointer;
 		}
@@ -78,19 +99,123 @@
 		.slider::-moz-range-thumb {
 		  width: 25px;
 		  height: 25px;
-		  background: white;
+		  border-radius: 50%;
+		  background: #4CAF50;
 		  cursor: pointer;
+		}
+
+		div.blue{
+		color: white;
+		background-color: rgb(0,0,255);
+
+		}
+
+		div.black{
+		color: white;
+		background-color: rgb(0,0,0);
+	
+		}
+
+		p.slidertext{
+			font-family: ‘Font’;
+			padding-top: 10px;
+			padding-left: 20px;
+			font-variation-settings: 'SIZE' 1;
+			font-size: 10px;
+
+
+		}
+
+		.btn-group{
+			left:-2px;
+			top:-1px;
+		}
+
+		.btn-group .button {
+		  background-color: white; /* Green */
+		  border: 1px solid #C0C0C0;
+		  color: black;
+		  padding: 10px 10px 10px 20px;
+		  text-align: left;
+		  text-decoration: none;
+		  display: inline-block;
+		  font-family: ‘Font’;
+		  font-variation-settings: 'SIZE' 300;
+		  font-size: 14px;
+		  cursor: pointer;
+		  float: left;
+		  width: 51vw;
+		}
+
+		.buttonSliders{width: 100%;}
+
+		.buttonDistance{width: 100%;}
+
+		.btn-group .button:not(:last-child) {
+		  border-right: none; /* Prevent double borders */
+		}
+
+		.col-sm{
+
+			padding: 0;
 		}
 	</style>
 
 </head>
 
 <body class="disable-select disable-scroll">
+	<div class="container-fluid">
+
+			
+			<div class="row">
+				<div class="col-sm">
+					<div class="btn-group">
+		  				<button class="button buttonSliders" id="buttonSliders">Sliders</button>
+		  				<button class="button buttonDistance" id="buttonDistance">Distance</button>
+		  			</div>
+	  			</div>
+			</div>
+
+		
+		<div class="slidecontainer" id="slidecontainer">
+				<div class="row">
+
+				
+				<div class="col-sm-1 ">
+					<p class="slidertext">Resolution</p>
+				</div>
+				<div class="col-sm-3 ">
+			  		<input type="range" min="1" max="300" value="300" class="slider" id="Resolution">
+				</div>
+		  		
+
+		  		<div class="col-sm-1 ">
+			  		<p class="slidertext">Tracking</p>
+			  	</div>
+			  	<div class="col-sm-3 ">
+			  		<input type="range" min="-0.1" max="0.1" step="0.01" value="0" class="slider" id="Tracking">
+		  		</div>
+
+		  		<div class="col-sm-1 ">
+			  		<p class="slidertext">Leading</p>
+			  	</div>
+			  	<div class="col-sm-3 ">
+			  		<input type="range" min="1" max="300" value="100" class="slider" id="Leading">
+		  		</div>
+
+			</div>
+		</div>
+
+	</div>
+
+	<div id="elements">
+	<div id="text">atto</div>
+	<p>Value: <span id="demo"></span></p>
+	</div>
+	
 
 	
-	<div id="text">prova</div>
 	<script src="../../js/lib/p5/p5.min.js"></script>
-	<!-- <script src="../../../js/lib/p5/addons/p5.sound.min.js"></script> -->
 	<script src="main.js"></script>
 </body>
 </html>
