--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -20,6 +20,7 @@
 			color: black;	
 			padding:0;
 			margin:0;
+			position: relative;
 		}
 
 		@font-face {
@@ -53,6 +54,7 @@
 			font-variation-settings: 'SIZE' 300;
 			/*letter-spacing: -1px;*/
 			font-kerning: normal;
+			z-index: -1;
 		}
 
 		.slidecontainer {
@@ -159,6 +161,88 @@
 
 			padding: 0;
 		}
+
+		#info {
+        order: 0;
+        width: 100vw;
+        height: 3vh;
+        color: black;
+        /*font-size: 1.618em;*/
+        padding-left: 20px;
+        padding-top: 15px;
+    	}
+
+    	#about {
+        position: absolute;
+        display: none;
+        z-index: 4;
+        width: 100vw;
+        height: 100vh;
+        max-width: 100%;
+        background-color: white;
+        flex-direction: row;
+        flex-wrap: wrap;
+        /*font-size: 1.618em;*/
+        padding-top: 15px;
+        padding-left: 20px;
+        line-height: 1.25em;
+        justify-content: flex-start;
+    }
+
+		#buttonAbout {
+        height: 21px;
+        width: 21px;
+        max-width: 21px;
+        cursor: pointer;
+        margin: 0px 0px 0px 12px;
+        background-color: white;
+        border-radius: 50%;
+        border: 1px solid #C0C0C0;
+        text-align: center;
+        display: inline-block;
+        color: black;
+        /*font-size: 0.618em;*/
+        line-height: 1.1em;
+    	}
+
+    	#buttonClose {
+        z-index: 3;
+        width: 100vw;
+        height: 12vh;
+        bottom: 55px;
+        right: 50px;
+        font-size: 1em;
+        text-decoration: underline;
+        cursor: pointer;
+    	}
+
+    	#buttonX {
+        height: 21px;
+        width: 21px;
+        max-width: 21px;
+        cursor: pointer;
+        margin: 0px 0px 0px 12px;
+        background-color: white;
+        border-radius: 50%;
+        border: 1px solid #C0C0C0;
+        text-align: center;
+        display: inline-block;
+        color: black;
+        /*font-size: 0.618em;*/
+        line-height: 1.1em;
+    	}
+
+    	#about .title {
+        width: 50%;
+        order: 0;
+        margin-right: 25px;
+        height: 88vh;
+    	}
+
+    	.active {
+        display: flex !important;
+    		}
+
 	</style>
 
 </head>
@@ -212,6 +296,19 @@
 	<div id="text">atto</div>
 	<p>Value: <span id="demo"></span></p>
 	</div>
+
+	<div id="info">
+        <p><span id="buttonAbout">?</span></p>
+    </div>
+
+    <div id="about">
+        <div id="buttonClose"><span id="buttonX">×</span></div>
+        <div class="title">
+           Optotype is a display font with the purpose of experiencing the interaction between screen, distance and readability. Designed starting from a pixel font, the character is inspired by the work of Wim Crouwel, who anticipated the digital revolution. The font takes readability principles from the most geometric font, where it maintains open terminals and a 1/3 ratio in the structure between ascender/descender and x-height.
+         The font has been designed for the screen and to be used for titling and branding, adapting to size and resolution. The font changes drastically in four steps that take up digital fonts in the various stages of the digital revolution.
+         With the distance panel you can modify the variable by approaching or moving away from the camera with your face, through a machine learning system that captures your position.
+        </div>
+    </div>
 	
 
 	
