--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -25,8 +25,7 @@
 
 		@font-face {
 			font-family: ‘Font’;
-			src: url('DVGX.ttf') format('truetype-variations');
-			/*font-weight: 0 1000;*/			
+			src: url('DVGX.ttf') format('truetype-variations');			
 			color: black;
 		}
 
@@ -59,7 +58,7 @@
 
 		.slidecontainer {
 		 	width: 102vw;
-
+		 	background-color: white;
 		  	z-index: 1;
 		  	border: 1px solid #C0C0C0;
 		  	padding: 0;
@@ -312,7 +311,11 @@
 	
 
 	
-	<script src="../../js/lib/p5/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+	<script src="https://unpkg.com/ml5@0.3.1/dist/ml5.min.js"></script>
 	<script src="main.js"></script>
+	<script src="distance.js"></script>
+	<div class="debug"></div>
 </body>
 </html>
