--- a/scrubVideo/index.html
+++ b/scrubVideo/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
+<head Set-Cookie: SameSite=none>
   <meta charset="UTF-8">
   <title>Scrub a video while scrolling</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
