--- a/scrubVideo/index.html
+++ b/scrubVideo/index.html
@@ -10,10 +10,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="spacer"></div>
-<div id="text">scroll↓</div>
+<div id="text">optotype</br></br></br></br>
+↓</div>
 
 <video class="video">
-    <source src="loopLow.mov" type="video/mp4">
+    <source src="mountain_loop.mp4" type="video/mp4">
 </video>
 <!-- partial -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
