--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -242,6 +242,10 @@
         display: flex !important;
     		}
 
+    	p .title{
+    		z-index: 4;
+    	}
+
 	</style>
 
 </head>
@@ -292,7 +296,9 @@
 	</div>
 
 	<div id="elements">
-	<div id="text">atto</div>
+	<div id="text">
+		<p contenteditable="true" class="text">optotype</p>
+	</div>
 	<p>Value: <span id="demo"></span></p>
 	</div>
 
