changes in about

--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -81,9 +81,13 @@
     <div id="about">
         <div id="buttonClose"><span id="buttonX">×</span></div>
         <div class="aboutText">
+        	<p class="pText">
            Optotype is a display font with the purpose of experiencing the interaction between screen, distance and readability. Designed starting from a pixel font, the character is inspired by the work of Wim Crouwel, who anticipated the digital revolution. The font takes readability principles from the most geometric font, where it maintains open terminals and a 1/3 ratio in the structure between ascender/descender and x-height.
-         The font has been designed for the screen and to be used for titling and branding, adapting to size and resolution. The font changes drastically in four steps that take up digital fonts in the various stages of the digital revolution.
-         With the distance panel you can modify the variable by approaching or moving away from the camera with your face, through a machine learning system that captures your position.
+           </p>
+           <p class="pText" style="text-indent: 40px">The font has been designed for the screen and to be used for titling and branding, adapting to size and resolution. The font changes drastically in four steps that take up digital fonts in the various stages of the digital revolution.</p>
+           	<p class="pText" style="text-indent: 40px">
+         With the distance panel you can modify the variable by approaching or moving away from the camera with your face, through a machine learning system that captures your position.</p>
+         
         </div>
     </div>
 	
