--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-status-bar-style"  content="black">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
@@ -97,8 +97,8 @@
     </div>
   </main>
   
-  <!-- partial -->
-  <script  src="./script.js"></script>
+<!-- partial -->
+<script src="assets/js/main_inverti.js"></script>
 
 </body>
 </html>
