--- a/E_motion/index_About_EN.html
+++ b/E_motion/index_About_EN.html
@@ -13,10 +13,19 @@
   <meta name="apple-mobile-web-app-status-bar-style"  content="black">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
+
+<main class="buttonVariable">  
+  <div id="myDIV">
+    <button class="btn btnVoice" id="btnVoice">Voice</button>
+    <button class="btn btnMouse" id="btnMouse">Mouse</button>
+    <button class="btn active" id="btnSlider">Slider</button>
+  </div>
+</main>
+
   <div class="topnav">
     <a href="index.html">[E·motion]</a>
     <a href="index_About_ITA.html" class="active">About</a>
@@ -29,38 +38,77 @@
   <div class="language">
     <a href="index_About_EN.html" class="active">English</a>
     <a href="index_About_ITA.html">Italiano</a>
+    <div class="topnav-right">
+      <button class="button button-invert" id="button"></button>
+    </div>
   </div>
 
   <!-- text About -->
   <main class="container-text">
     <div>
-      <p class="About-text">
-        [E·motion] it’s a Typeface designed for a film or small clip subtitles.</br>
-        [E·motion] have been con-ceived not only to translate the dialogue, in fact he rebuilds the emotion and sound effect of the different scenes you see on videos.</br>
-        The font presents nine variables emotion with also a neutral weight one. </br>
+      <p class="About-text" id="text-about">
+        [E·motion] it’s a Typeface designed for a film or small clip subtitles.
+        [E·motion] have been con-ceived not only to translate the dialogue, in fact he rebuilds the emotion and sound effect of the different scenes you see on videos.
+        The font presents nine variables emotion with also a neutral weight one.
         The choice of this nine variable emotions, has been based on the studies of the emotions by Robert Plutchik and Paul Elkman, who has found the eight primal emotions. Based on these researches, emotions are made visible by our face body language.
       </p>
-    </div>
-  </main>
-  <main class="container-thanks">
-    <div>
-      <p class="Thanks-text">
-        GRAPHIC & TYPE DESIGN</br>
+<!--       <p class="Thanks-text" id="text-about">
+        GRAFICA & TYPE DESIGN</br>
         Chiara Crivelli</br>
-        Bachelor in Visual Communication</br>
+        Bachelor in Comunicazione Visiva</br>
         2019–2020
       </p>
-      <p class="Thanks-text">
-        MANY THANKS</br>
+      <p class="Thanks-text" id="text-about">
+        GRAZIE MILLE</br>
         Sylvain Esposito</br>
-        My Family</br>
-        My Friends
-      </p>
+        La mia famiglia</br>
+        I miei amici
+      </p> -->
+    </div>
+
+    <div class="slidercontainer">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="SAJO" name="SAJO" data-index="0">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="DITR" name="DITR" data-index="1">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="ANFE" name="ANFE" data-index="2">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="ANSU" name="ANSU" data-index="3">
+
+      <div class="slider-controls">
+        <label for="text-SAJO" class="slider-label-left">Sadness/ Joy</label>
+        <label for="text-SAJO" class="slider-label-right">
+         [<span class="outputSAJO" id="demoSAJO">0</span>]   
+        </label>
+      </div>
+
+      <div class="slider-controls">
+        <label for="text-DITR" class="slider-label-left">Disgust/ Trust</label>
+        <label for="text-DITR" class="slider-label-right">
+          [<span class="outputDITR" id="demoDITR">0</span>] 
+        </label>
+      </div>
+
+      <div class="slider-controls">
+        <label for="text-ANFE" class="slider-label-left">Anger/ Fear</label>
+        <label for="text-ANFE" class="slider-label-right">
+          [<span class="outputANFE" id="demoANFE">0</span>] 
+        </label>
+      </div>
+
+      <div class="slider-controls">
+        <label for="text-ANSU" class="slider-label-left">Anticipation/ Surprise</label>
+        <label for="text-ANSU" class="slider-label-right">
+          [<span class="outputANSU" id="demoANSU">0</span>] 
+        </label>
+      </div>
     </div>
   </main>
 
-  <!-- partial -->
-  <script  src="./script.js"></script>
+<script src="assets/js/main_about.js"></script>
+<script src="assets/js/main_slider_about.js"></script>
+<script src="assets/js/main_inverti.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
 
 </body>
 </html>
