--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -11,19 +11,16 @@
   <meta name="theme-color"              content="black">
   <meta name="msapplication-navbutton-color"      content="black">
   <meta name="apple-mobile-web-app-status-bar-style"  content="black">
-
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
 
 <main class="buttonVariable">  
   <div id="myDIV">
-    <!-- <button onclick="startr();" class="btn">Sound</button> -->
-    <button id="btnSound" class="btn">Sound</button>
-
+    <button class="btn btnVoice" id="btnVoice">Voice</button>
     <button class="btn btnMouse" id="btnMouse">Mouse</button>
-    <button class="btn active">Slider</button>
+    <button class="btn active" id="btnSlider">Slider</button>
   </div>
 </main>
 
@@ -39,57 +36,49 @@
 <main class="container">
   
   <div>
-    <p contenteditable="true" class="demo-text">[E·motion]</p>
+    <p contenteditable="true" class="demo-text" id="text">[E·motion]</p>
   </div>
   
 
-    <div class="slider-container">
-      <input type="range" min="-100" max="100" value="0" class="slider" id="text-SAJO" name="text-SAJO" data-index="0">
+    <div class="slidercontainer">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="SAJO" name="SAJO" data-index="0">
 
-      <input type="range" min="-100" max="100" value="0" class="slider" id="text-DITR" name="text-DITR" data-index="1">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="DITR" name="DITR" data-index="1">
 
-      <input type="range" min="-100" max="100" value="0" class="slider" id="text-ANFE" name="text-ANFE" data-index="2">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="ANFE" name="ANFE" data-index="2">
 
-      <input type="range" min="-100" max="100" value="0" class="slider" id="text-ANSU" name="text-ANSU" data-index="3">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="ANSU" name="ANSU" data-index="3">
 
 
       <div class="slider-controls">
-        <label for="text-SAJO" class="slider-label-left">
-         Sadness [<span class="output" data-index="0">0</span>]   
-        </label>
+        <label for="text-SAJO" class="slider-label-left">Sadness/ Joy</label>
         <label for="text-SAJO" class="slider-label-right">
-         Joy [<span class="output1" data-index="0">1</span>]   
+         [<span class="outputSAJO" id="demoSAJO">0</span>]   
         </label>
       </div>
 
       <div class="slider-controls">
-        <label for="text-ANFE" class="slider-label-left">
-          Disgust [<span class="output" data-index="1">0</span>] 
+        <label for="text-DITR" class="slider-label-left">Disgust/ Trust</label>
+        <label for="text-DITR" class="slider-label-right">
+          [<span class="outputDITR" id="demoDITR">0</span>] 
         </label>
+      </div>
+
+      <div class="slider-controls">
+        <label for="text-ANFE" class="slider-label-left">Anger/ Fear</label>
         <label for="text-ANFE" class="slider-label-right">
-          Trust [<span class="output1" data-index="1">1</span>] 
+          [<span class="outputANFE" id="demoANFE">0</span>] 
         </label>
       </div>
 
       <div class="slider-controls">
-        <label for="text-slant" class="slider-label-left">
-          Anger [<span class="output" data-index="2">0</span>] 
-        </label>
-        <label for="text-slant" class="slider-label-right">
-          Fear [<span class="output1" data-index="2">1</span>] 
-        </label>
-      </div>
-
-      <div class="slider-controls">
-        <label for="text-slant" class="slider-label-left">
-          Anticipation [<span class="output" data-index="3">0</span>] 
-        </label>
-        <label for="text-slant" class="slider-label-right">
-          Surprice [<span class="output1" data-index="3">1</span>] 
+        <label for="text-ANSU" class="slider-label-left">Anticipation/ Surprise</label>
+        <label for="text-ANSU" class="slider-label-right">
+          [<span class="outputANSU" id="demoANSU">0</span>] 
         </label>
       </div>
     </div>
-</main>
+  </main>
 
 <script>
   // Add active class to the current button (highlight it)
@@ -115,8 +104,8 @@
   }
 </script>
 
-<!-- <script src="main_sound.js"></script> -->
-<script  src="./script.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/main_slider.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
