--- a/E_motion/index_About_EN.html
+++ b/E_motion/index_About_EN.html
@@ -27,7 +27,7 @@
 </main>
 
   <div class="topnav">
-    <a href="index.html">[E·motion]</a>
+    <a href="index_Video.html">[E·motion]</a>
     <a href="index_About_ITA.html" class="active">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
