--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="topnav">
-    <a href="index.html">[E·motion]</a>
+    <a href="index_Video.html">[E·motion]</a>
     <a href="index_About_ITA.html">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html" class="active">Specimen</a>
