--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -25,7 +25,7 @@
 </main>
 
   <div class="topnav">
-    <a href="index.html">[E·motion]</a>
+    <a href="index_Video.html">[E·motion]</a>
     <a href="index_About_ITA.html">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
