--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -64,12 +64,12 @@
 
 	<div id="elements">
 	<div id="text">
-		<p contenteditable="true" id="text1">AcriMSAT</p>
-		<p contenteditable="true" id="text2">Apollo 12</p>
-		<p contenteditable="true" id="text3">Constellation</p>
-		<p contenteditable="true" id="text4">DSN 34 Freedom7</p>
-		<p contenteditable="true" id="text5">OSIRIS-REx</p>
-		<p contenteditable="true" id="text6">OM2300SGX4 3 5X</p>
+		<div><span class="val">1</span><p contenteditable="true" id="text1">AcriMSAT</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text2">Apollo 12</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text3">Constellation</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text4">DSN 34 Freedom7</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text5">OSIRIS-REx</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text6">OM2300SGX4 3 5X</p></div>
 	</div>
 	<p>Value: <span id="demo"></span></p>
 	</div>
