--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -54,7 +54,7 @@
 			  		<p class="slidertext">Leading</p>
 			  	</div>
 			  	<div class="col-sm-3 ">
-			  		<input type="range" min="1" max="300" value="100" class="slider" id="Leading">
+			  		<input type="range" min="85" max="185" value="130" class="slider" id="Leading">
 		  		</div>
 
 			</div>
@@ -70,8 +70,11 @@
 		<div><span class="val">1</span><p contenteditable="true" id="text4">DSN 34 Freedom7</p></div>
 		<div><span class="val">1</span><p contenteditable="true" id="text5">OSIRIS-REx</p></div>
 		<div><span class="val">1</span><p contenteditable="true" id="text6">OM2300SGX4 3 5X</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text7">MUSTOOL G1200 12MP 45X Zoom Emz</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text8">The term lidar was originally a portmanteau of light and radar./p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text9">Lidar is commonly used to make high-resolu- tion maps, with applications in surveying, geodesy</p></div>
+		<div><span class="val">1</span><p contenteditable="true" id="text10"> →Lidar Mapping of M6.4 and M7.1 Ridgecrest earthquake sequence. <br>Data collected by NCALM (National Center for Airborne Laser Mapping)</p></div>
 	</div>
-	<p>Value: <span id="demo"></span></p>
 	</div>
 
 	<div id="info">
