--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -26,79 +26,61 @@
     </div>
   </div>
 
-  <div class="attached">
-    <a>PDF</a>
-    <a>Trailer</a>
+  <div class="nav">
+    <a href="assets/PDF/Specimen_ITA.PDF" download>PDF</a>
+    <a href="">Trailer</a>
   </div>
 
   <!-- <main class="Style-text">[E·motion] Neutral</main> -->
   <main class="container-specimen">
-    <div>
-      <p class="Style-Neutral">[E·motion] Neutral</p>
-      <p class="Text-Neutral">
+      <p>[E·motion] Neutral</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-    <div>
-      <p class="Style">[E·motion] Joy</p>
-      <p class="Text-Joy">
+      <p>[E·motion] Joy</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 100, 'DITR' 0, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Trust</p>
-      <p class="Text-Trust">
+      <p>[E·motion] Trust</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 100, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Fear</p>
-      <p class="Text-Fear">
+      <p>[E·motion] Fear</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 100, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Surprise</p>
-      <p class="Text-Surprise">
+      <p>[E·motion] Surprise</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' 100; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Sadness</p>
-      <p class="Text-Sadness">
+      <p>[E·motion] Sadness</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' -100, 'DITR' 0, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Disgust</p>
-      <p class="Text-Disgust">
+      <p>[E·motion] Disgust</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' -100, 'ANFE' 0, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Anger</p>
-      <p class="Text-Anger">
+      <p>[E·motion] Anger</p>
+      <p ccontenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' -100, 'ANSU' 0; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
 
-     <div>
-      <p class="Style">[E·motion] Anticipation</p>
-      <p class="Text-Anticipation">
+      <p>[E·motion] Anticipation</p>
+      <p contenteditable="true" class="Text" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' -100; padding-top: 1.5rem;">
         A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www
       </p>
-    </div>
   </main>
   
 <!-- partial -->
-<script src="assets/js/main_inverti.js"></script>
+<!-- <script src="assets/js/main_inverti.js"></script> -->
 
 </body>
 </html>
