--- a/E_motion/index_About_ITA.html
+++ b/E_motion/index_About_ITA.html
@@ -36,78 +36,94 @@
   </div>
 
   <div class="language">
-    <a href="index_About_EN.html">English</a>
+    <a class="demo-text" id="text" onclick='document.getElementById("text").innerHTML = "[E·motion] it’s a Typeface designed for a film or small clip subtitles.[E·motion] have been con-ceived not only to translate the dialogue, in fact he rebuilds the emotion and sound effect of the different scenes you see on videos. The font presents nine variables emotion with also a neutral weight one. The choice of this nine variable emotions, has been based on the studies of the emotions by Robert Plutchik and Paul Elkman, who has found the eight primal emotions. Based on these researches, emotions are made visible by our face body language."'>English</a>
     <a href="index_About_ITA.html" class="active">Italiano</a>
-    <div class="topnav-right">
+    <!-- <div class="topnav-right">
       <button class="button button-invert" id="button"></button>
-    </div>
+    </div> -->
   </div>
 
-  <!-- text About -->
-  <main class="container-text">
-    <div>
-      <p class="About-text" id="text-about">
-        [E·motion] è un carattere tipografico ideato per il testo dei sottotitoli presenti nei film e nei video cinematografici.
+<main class="container">
+    <div id="elements">
+    <div id="text">
+      <p style="margin-top: 1.5rem; font-size: 2rem; text-align: left; margin-left: 1rem;   margin-right: 20vw;" class="demo-text" id="text">[E·motion] è un carattere tipografico ideato per il testo dei sottotitoli presenti nei film e nei video cinematografici.
         [E·motion] è stato concepito al fine di tradurre non solamente i dialoghi pronunciati dai narratori, ma ricostruisce in modo tipografico un ambiente emotivo e l’aspetto sonoro.
-        Il carattere presenta otto varianti emotive ed un peso neutrale. La scelta di una suddivisione in nove pesi differenti deriva dalle ricerche sulle emozioni realizzate da Robert Plutchik e Paul Ekman, i quali hanno definito le otto emozioni primarie. Secondo i rispettivi studi queste sensazioni sono percettibili sull’espressione facciale.
-      </p>
-<!--       <p class="Thanks-text" id="text-about">
-        GRAFICA & TYPE DESIGN</br>
-        Chiara Crivelli</br>
-        Bachelor in Comunicazione Visiva</br>
-        2019–2020
-      </p>
-      <p class="Thanks-text" id="text-about">
-        GRAZIE MILLE</br>
-        Sylvain Esposito</br>
-        La mia famiglia</br>
-        I miei amici
-      </p> -->
+        Il carattere presenta otto varianti emotive ed un peso neutrale. La scelta di una suddivisione in nove pesi differenti deriva dalle ricerche sulle emozioni realizzate da Robert Plutchik e Paul Ekman, i quali hanno definito le otto emozioni primarie. Secondo i rispettivi studi queste sensazioni sono percettibili sull’espressione facciale.</p>
+    </div>
     </div>
 
-    <div class="slidercontainer">
-      <input type="range" min="-100" max="100" value="0" class="slider" id="SAJO" name="SAJO" data-index="0">
-      <input type="range" min="-100" max="100" value="0" class="slider" id="DITR" name="DITR" data-index="1">
-      <input type="range" min="-100" max="100" value="0" class="slider" id="ANFE" name="ANFE" data-index="2">
-      <input type="range" min="-100" max="100" value="0" class="slider" id="ANSU" name="ANSU" data-index="3">
+    <!-- SAJO Controls -->
+    <div class="slider-container">
+      <input type="range" min="-100" max="100" value="0" class="slider" id="text-SAJO" name="text-SAJO" data-index="0">
+    <!-- DITR Controls -->
+      <input type="range" min="-100" max="100" value="0" class="slider" id="text-DITR" name="text-DITR" data-index="1">
+    <!-- ANFE Controls -->
+      <input type="range" min="-100" max="100" value="0" class="slider" id="text-ANFE" name="text-ANFE" data-index="2">
+    <!-- ANSU Controls -->
+      <input type="range" min="-100" max="100" value="0" class="slider" id="text-ANSU" name="text-ANSU" data-index="2">
 
       <div class="slider-controls">
-        <label for="text-SAJO" class="slider-label-left">Sadness/ Joy</label>
+        <label for="text-SAJO" class="slider-label-left">Sadness/ Joy </label>
         <label for="text-SAJO" class="slider-label-right">
-         [<span class="outputSAJO" id="demoSAJO">0</span>]   
+        [<span class="output" data-index="0">0</span>] 
         </label>
       </div>
 
       <div class="slider-controls">
         <label for="text-DITR" class="slider-label-left">Disgust/ Trust</label>
-        <label for="text-DITR" class="slider-label-right">
-          [<span class="outputDITR" id="demoDITR">0</span>] 
+        <label for="text-SAJO" class="slider-label-right">
+        [<span class="output" data-index="1">0</span>] 
         </label>
       </div>
 
       <div class="slider-controls">
         <label for="text-ANFE" class="slider-label-left">Anger/ Fear</label>
-        <label for="text-ANFE" class="slider-label-right">
-          [<span class="outputANFE" id="demoANFE">0</span>] 
+        <label for="text-SAJO" class="slider-label-right">
+        [<span class="output" data-index="2">0</span>] 
         </label>
       </div>
 
       <div class="slider-controls">
         <label for="text-ANSU" class="slider-label-left">Anticipation/ Surprise</label>
-        <label for="text-ANSU" class="slider-label-right">
-          [<span class="outputANSU" id="demoANSU">0</span>] 
+        <label for="text-SAJO" class="slider-label-right">
+          [<span class="output" data-index="3">0</span>] 
         </label>
       </div>
     </div>
   </main>
-</body>
+<!-- <p class="copyright">© 2020 SUPSI – Chiara Crivelli</button> -->
 
-<script src="assets/js/main_about.js"></script>
-<script src="assets/js/main_slider_about.js"></script>
-<script src="assets/js/main_inverti.js"></script>
+  <script>
+  // Add active class to the current button (highlight it)
+  var header = document.getElementById("myDIV");
+  var btns = header.getElementsByClassName("btn");
+  for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function() {
+    var current = document.getElementsByClassName("active");
+    if (current.length > 0) { 
+      current[0].className = current[0].className.replace(" active", "");
+    }
+    this.className += " active";
+    });
+  }
+</script>
+
+<script type="text/javascript">
+  document.ontouchmove = function(e){
+    e.preventDefault();
+  }
+  document.ontouchmove = function(e){
+    e.preventDefault();
+  }
+</script>
+
+<script src="assets/js/main_slider.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
+
+</body>
+
 
 </html>
