--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -26,7 +26,7 @@
 
   <div class="topnav">
     <a href="index_Video.html">[E·motion]</a>
-    <a href="index_About.html">About</a>
+    <a href="index_About_ITA.html">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
       <a href="index_Trial.html" class="active">Trial</a>
@@ -36,7 +36,7 @@
 <main class="container">
     <div id="elements">
     <div id="text">
-      <p style="display: flex; justify-content: center;align-items: center; position:absolute; height: 50vh;border: none; outline: none; line-height: 1px;user-select: none; height: 80vh; width: 100vw; font-size: 10rem;
+      <p style="display: flex; justify-content: center;align-items: center; position:absolute; height: 50vh;border: none; outline: none; line-height: 1px;user-select: none; width: 100vw; font-size: 10rem;
 "contenteditable="true" class="demo-text" id="text">[E·motion]</p>
     </div>
     </div>
