--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -16,6 +16,15 @@
 </head>
 <body>
 
+  <div class="topnav">
+    <a href="index.html" class="active">[E·motion]</a>
+    <a href="index_About_ITA.html">About</a>
+    <div class="topnav-right">
+      <a href="index_Specimen.html">Specimen</a>
+      <a href="index_Tial.html">Trial</a>
+    </div>
+  </div>
+
     <video width="800" controls autoplay="true">
         <source src="Khan.mp4" type="video/mp4">
     </video>
