--- a/E_motion/index_About_ITA.html
+++ b/E_motion/index_About_ITA.html
@@ -39,8 +39,8 @@
     </div>
 
     <div class="topnav">
-    <a href="index_Video.html">[E·motion]</a>
-    <a href="index_About.html" class="active">About</a>
+    <a href="index.html">[E·motion]</a>
+    <a href="index_About_ITA.html" class="active">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
       <a href="index_Trial.html">Trial</a>
