--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -97,7 +97,7 @@ section {
   </div>
 
   <div class="topnav">
-    <a href="index_Video.html">[E·motion]</a>
+    <a href="index.html">[E·motion]</a>
     <a href="index_About_ITA.html">About</a>
     <div class="topnav-right" id="navbar">
       <a href="index_Specimen.html" class="active">Specimen</a>
