--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -18,7 +18,7 @@
 
     <div class="topnav" style="background: none;">
       <a href="index.html">[E·motion]</a>
-      <a href="index_About_ITA.html">About</a>
+      <a href="index_About.html">About</a>
       <div class="topnav-right" style="background: none;">
         <a href="index_Specimen.html">Specimen</a>
         <a href="index_Trial.html" class="active">Trial</a>
