--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -26,7 +26,7 @@
 
   <div class="topnav">
     <a href="index.html">[E·motion]</a>
-    <a href="index_About_ITA.html">About</a>
+    <a href="index_About.html">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
       <a href="index_Trial.html" class="active">Trial</a>
@@ -106,7 +106,6 @@
   }
 </script>
 
-<!-- <script src="assets/js/main.js"></script> -->
 <script src="assets/js/main_slider.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
