--- a/E_motion/index_About.html
+++ b/E_motion/index_About.html
@@ -40,7 +40,7 @@
 
     <div class="topnav">
     <a href="index.html">[E·motion]</a>
-    <a href="index_About_ITA.html" class="active">About</a>
+    <a href="index_About.html" class="active">About</a>
     <div class="topnav-right">
       <a href="index_Specimen.html">Specimen</a>
       <a href="index_Trial.html">Trial</a>
