--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -98,7 +98,7 @@ section {
 
   <div class="topnav">
     <a href="index.html">[E·motion]</a>
-    <a href="index_About_ITA.html">About</a>
+    <a href="index_About.html">About</a>
     <div class="topnav-right" id="navbar">
       <a href="index_Specimen.html" class="active">Specimen</a>
       <a href="index_Trial.html">Trial</a>
